...
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="marker_pickup" translatesAutoresizingMaskIntoConstraints="NO" id="sIZ-VY-fiR">
                                <rect key="frame" x="124" y="326" width="72" height="103"/>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="mHj-Xs-Z6c">
                                <rect key="frame" x="8" y="614" width="304" height="45"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TGw-TV-i4G" userLabel="Confirm Pickup" customClass="ColoredButton" customModule="rider">
                                        <rect key="frame" x="0.0" y="0.0" width="96.5" height="45"/>
                                        <color key="backgroundColor" red="0.0" green="0.57870462940745071" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="tJb-Vj-Yra"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
...
                            <constraint firstItem="hcl-I2-75V" firstAttribute="width" secondItem="93Y-mY-aXb" secondAttribute="width" id="sAs-ar-xqc"/>
                            <constraint firstItem="sIZ-VY-fiR" firstAttribute="centerY" secondItem="WM6-S1-1k3" secondAttribute="centerY" id="vmm-mw-kws"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="HqN-xL-wtY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Ridy" largeTitleDisplayMode="never" id="WKC-Mu-F9o">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="menu" id="zd5-TF-1Lf">
                            <connections>
                                <action selector="onMenuClicked:" destination="Dee-gZ-TbI" id="VoS-dP-rln"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="favorites" id="Cwm-XR-CjI">
                            <connections>
...
            </objects>
            <point key="canvasLocation" x="4070" y="-746"/>
        </scene>
        <!--Trip History-->
        <scene sceneID="Ody-cO-yAE">
            <objects>
                <collectionViewController storyboardIdentifier="TripHistory" title="Trip History" id="p2I-iQ-HlV" customClass="TripHistoryCollectionViewController" customModule="rider" customModuleProvider="target" sceneMemberID="viewController">
                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="MCe-rc-ohe">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="hKf-Wz-0HZ">
                            <size key="itemSize" width="341" height="110"/>
...
