...
        if(!imageMarker.isHidden) {
            map.removeAnnotation(pointsAnnotations.last!)
            pointsAnnotations.removeLast()
            buttonConfirmPickup.isHidden = (pointsAnnotations.count != 0)
            buttonConfirmFinalDestination.isHidden = (pointsAnnotations.count == 0 || AppDelegate.singlePointMode)
            buttonAddDestination.isHidden = (pointsAnnotations.count > (AppDelegate.maximumDestinations - 1) || AppDelegate.singlePointMode || pointsAnnotations.count == 0)
            leftBarButton.image = (pointsAnnotations.count == 0 ? UIImage(named: "menu") : UIImage(named: "back"))
            imageMarker.image = (pointsAnnotations.count == 0 ? UIImage(named: "marker_pickup") : UIImage(named: "marker_destination"))
            return
        }
        goBackFromServiceSelection()
    }
    
...
